--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="delete_a_dodo">Delete a dodo</string>
     <string name="edit">Edit</string>
     <string name="settings">Settings</string>
+    <string name="home">home</string>
 </resources>
