--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="edit">Edit</string>
     <string name="settings">Settings</string>
     <string name="home">home</string>
+    <string name="dodo_list_select">Please select a dodo.</string>
 </resources>
