Made DeleteActivity include DodoListActivity to eliminate repeated code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="settings">Settings</string>
     <string name="home">home</string>
     <string name="dodo_list_select">Please select a dodo.</string>
+    <string name="delete_caption">Please pick a dodo to delete.</string>
 </resources>
