Set up basic SettingsActivity with (unimplemented) dark mode toggle.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="add_hintName">Ex: John Dodo</string>
     <string name="name_of_dodo">Name of dodo</string>
     <string name="mass_kg">Mass [kg]</string>
+    <string name="about">About</string>
 </resources>
