Changed dodos to be more informative, added comments to activities, and edited item_view.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,8 @@
         Claessens, Leon P.A.M., et al. \“The Morphology of the Thirioux Dodos.\” Memoir (Society of Vertebrate Paleontology), vol. 15, 2015, pp. 29–187. JSTOR, www.jstor.org/stable/44512774. Accessed 31 Dec. 2020.\n\n
         Gatesy, Stephen &amp; Biewener, Andrew. \"Bipedal locomotion: effects of speed, size and limb posture in birds and humans.\" Journal of Zoology vol. 224. 23 Dec. 2009, doi:10.1111/j.1469-7998.1991.tb04794.x.\n\n
         Gatesy, Stephen M., &amp; Middleton, Kevin M. \“Bipedalism, Flight, and the Evolution of Theropod Locomotor Diversity.\” Journal of Vertebrate Paleontology, vol. 17, no. 2, 1997, pp. 308–329. JSTOR, www.jstor.org/stable/4523809. Accessed 31 Dec. 2020.\n\n
-        van Heteren, Anneke H, et al. \"Neither slim nor fat: estimating the mass of the dodo (Raphus cucullatus, Aves, Columbiformes) based on the largest sample of dodo bones to date.\” PeerJ vol. 5 e4110. 5 Dec. 2017, doi:10.7717/peerj.4110.
+        van Heteren, Anneke H, et al. \"Neither slim nor fat: estimating the mass of the dodo (Raphus cucullatus, Aves, Columbiformes) based on the largest sample of dodo bones to date.\” PeerJ vol. 5 e4110. 5 Dec. 2017, doi:10.7717/peerj.4110.\n\n
+        Winters, R., Hume, J. P. &amp; Leenstra, M. \"A famine in Surat in 1631 and Dodos on Mauritius: a long lost manuscript rediscovered.\" Archives of Natural History. 44 (1): 134–150, 2017. doi:10.3366/anh.2017.0422.
     </string>
     <string name="about_strLimits">When working backwards to establish a mathematical relationship between dp and limbLengthVar, I only had 3 Rhea sample points. I assumed the relationship was linear but it could have been more complex.\n\n
         The 3 Rhea sample points I used were taken from the greatest, lowest, and mean values of rhea body mass and speed.\n\n
