--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="huntInput_txtfill3">1 (almost dead), 5 (average citizen), 10 (Marvel superhero)</string>
     <string name="huntInput_txtfill2">10 for 10 metres</string>
     <string name="huntInput_txtfill1">7 for 7 metres</string>
-    <string name="learn_more">About Dodos!</string>
+    <string name="learn_more">Learn about Dodos!</string>
     <string name="learn_strQuote">\"Amongst these birds were those which in India they call Dod-aersen (being a kind of very big goose); these birds are unable to fly, and instead of wings, they merely have a few small pins, yet they can run very swiftly.\"</string>
     <string name="learn_strQuoteCite">- 18th century manuscript (Cheke 2004)</string>
     <string name="about_strQuote">\"Striding bipedal locomotion has evolved independently in two vertebrate lineages, archosaurs and primates, and is represented today by humans and birds.\"</string>
