Moved dodo icon options as a field in DodoWaddle singleton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="endSpace">\n\n\n\n\n\n\n\n\n\n\n\n</string>
     <string name="omnomnom">Om nom nom!</string>
     <string name="omnomnom_msg">Looks like your sailor is no longer hungry...</string>
+    <string name="icon">Icon</string>
 </resources>
