Changed icon options to be proper dodo icons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="results_strScienceDied">Although the dodo lost this time, dodos are actually quite agile. As flightless birds, they are well suited to ground running and boast high speeds for their size. But why?</string>
     <string name="references">References</string>
     <string name="learn_strRef">
+        Images: All icons drawn by app maker. The following were based on existing images: ic_beak (Wikimedia Commons/William Clift), ic_rhea (Wikimedia Commons/Quartl) and ic_wing (Encyclopædia Britannica, Inc./Christine McCabe).\n\n
         Abourachid, Anick &amp; Renous, Sabine. \"Bipedal locomotion in ratites (Paleognatiform): examples of cursorial birds.\" British Ornithologists\' Union, Ibis, vol. 142, 2000, pp. 538-549. doi:10.1111/j.1474-919X.2000.tb04455.x.\n\n\t\t
         Bishop, P J et al. \“The influence of speed and size on avian terrestrial locomotor biomechanics: Predicting locomotion in extinct theropod dinosaurs.\” PloS one vol. 13,2 e0192172. 21 Feb. 2018, doi:10.1371/journal.pone.0192172.\n\n\t\t
         Blanco, R., Gambini, Rodolfo &amp; Fariña, Richard. \"Mechanical model for theoretical determination of maximum running speed in mammals.\" Journal of theoretical biology vol 222. 1, Jun. 2003, doi:10.1016/S0022-5193(03)00019-5.\n\n\t\t
